--- a/src/main/resources/templates/story-list.html
+++ b/src/main/resources/templates/story-list.html
@@ -2,20 +2,21 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
     <title>Agency - Start Bootstrap Theme</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}" />
+    <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}"/>
     <!-- Font Awesome icons (free version)-->
     <script th:src="@{https://use.fontawesome.com/releases/v5.15.3/js/all.js}" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link th:href="@{https://fonts.googleapis.com/css?family=Montserrat:400,700}" rel="stylesheet" type="text/css" />
-    <link th:href="@{https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700}" rel="stylesheet" type="text/css" />
+    <link th:href="@{https://fonts.googleapis.com/css?family=Montserrat:400,700}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700}" rel="stylesheet"
+          type="text/css"/>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <link th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav" th:insert="~{parts/navbar :: bar}">
@@ -26,22 +27,48 @@
 
     <div class="container">
         <h1 class="display-5">Stories</h1>
+        <!--        <form th:action="@{/stories/}" th:method="post">
+                    <input type="text" th:value="${url}" name="url">
+                    <input type="submit" value="Edit"/>
+                </form>-->
+        <button id="addStoryButton" class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#addStory">Add Story</button>
         <table class="table table-hover">
             <tr>
                 <th>Name</th>
+                <th>Author</th>
+                <th>Summary</th>
                 <th>URL</th>
                 <th>Action</th>
             </tr>
             <tr th:each="story : ${stories}">
-                <td><input type="text" class="form-control" th:value="${story.name}"></td>
-                <td><input type="text" class="form-control" th:value="${story.url}"></td>
+                <td th:text="${story.name}"></td>
+                <td th:text="${story.author}"></td>
+                <td th:text="${story.summary}"></td>
+                <td th:text="${story.url}"></td>
                 <td>
-                    <form th:action="@{/stories/}" th:object="${story}" th:method="put">
-                        <input type="submit" value="Edit"/>
-                    </form>
+                    <button id="deleteStory" class="btn btn-danger" type="button" th:attr="onclick=|deleteStory('${story.id}')|">Delete</button>
                 </td>
             </tr>
         </table>
+    </div>
+    <div class="modal fade" id="addStory">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="storyUrl" placeholder="URL">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="button" class="btn btn-primary" id="saveStory">Save</button>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -50,6 +77,8 @@
 <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js}"></script>
 <!-- Core theme JS-->
 <script th:src="@{/js/scripts.js}"></script>
+<script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+<script th:src="@{/js/storyList.js}"></script>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <!-- * *                               SB Forms JS                               * *-->
 <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
